@@ -1,21 +1,0 @@
-Description:
-Support for internationalization of bison-generated parsers.
-
-Files:
-m4/bison-i18n.m4
-
-Depends-on:
-
-configure.ac:
-BISON_I18N
-
-Makefile.am:
-
-Include:
-
-License:
-GPLed build tool
-
-Maintainer:
-Bruno Haible, Paul Eggert
-
