@@ -1,3 +1,9 @@
+2006-08-18  Bruno Haible  <bruno@clisp.org>
+
+	* modules/bison-i18n: Remove file. Now taken from gnulib.
+	* m4/bison-i18n.m4: Remove file. Now taken from gnulib.
+	* Makefile.am (EXTRA_DIST): Remove them.
+
 2006-08-16  Bruno Haible  <bruno@clisp.org>
 
 	* modules/gettext-tools-misc (Files): Remove m4/restrict.m4, no longer
